# taller-clases

./: .gitignore  .gitmodules  Makefile  README.md  index.html  j2custom.py  preamble.tex  sockets-presentation.html
bibliotecas-gui/sdl/src/: mainSdlHello.cpp
classes/: Makefile  classes.tex  const.tex  raii.tex  struct_and_classes.tex
client_server_arch/: client_server_arch.tex
client_server_arch/diagrams/: arch.drawio
cpp-misc/: README.md  slides.md
cpp-misc/src/friends/: CMakeLists.txt  Stack.cpp  Stack.h  StackTest.cpp  StackTest.h  main.cpp
cpp-misc/src/namespaces/: CMakeLists.txt  ej0.cpp  ej1.cpp  ej2.cpp  ej3.cpp  ej4a.cpp  ej4b.cpp
cpp-misc/src/smart_ptrs/: CMakeLists.txt  Foo.cpp  Foo.h  shared_ptr.cpp  unique_ptr_1.cpp  unique_ptr_2.cpp  weak_1.cpp  weak_2.cpp
extra/cmake/templates/: .readme.md.swp  readme.md
extra/cmake/templates/01/: CMakeLists.txt  config.h  config.h.in  readme.md
extra/cmake/templates/02/: CMakeLists.txt  Makefile  config.h  hello.cpp  readme.md
extra/cmake/templates/03/: CMakeLists.txt  config.h  config.h.in  hello.cpp  readme.md
extra/python/ctypes/: charla.md
extra/python/ctypes/cSum/: Makefile  cSum.py  main.py  readme.md  sum.c  test.c
extra/python/ctypes/orderNums/: main.py  readme.md
extra/python/ctypes/orderNums/radix/: cRadix.py  pyRadix.py
extra/python/ctypes/orderNums/radix/lib/: Makefile  Radix.cpp  Radix.h  test.cpp
extra/python/ctypes/orderNums/test/: genData.py
introthreads/: .~lock.introathreads2.odp#  introathreads-draft.odp
manejodeerrores/: exceptions.tex  exceptionsafety.tex  manejodeerrores.tex  raii.tex
memoria/: Makefile  align_size.tex  buffer_overflow.tex  memoria.tex  pointers-notation.tex  pointers.tex  segments.tex
memoria/src/cookie-buffer-overflow/: Makefile  main.cpp
memoria/src/java-faster-than-c/: .gitignore  ContarPrimos.java  Makefile  MaxSegmento.java  contar_primos.cpp  max_segmento.cpp
moving/: Makefile  assign.tex  moving.tex  moving_types.tex
poe/: poe.tex
proxy/: proxy.tex
scripts/: enter.sh
scripts/x/: run_in_docker.sh
shared-resources/: shared-resources.tex
sockets/: protocols.tex  sockets-tcp.tex  sockets.tex  stack-web.tex  tcp_ip_network_overview.tex
sockets/2018-2c/: README.md  slides.md
sockets/2018-2c/src/: 00-create.c  01-connect.c  02-getaddrinfo.c  03-send-recv.c  CMakeLists.txt
sockets/overview_slides/: doc_data.txt
sockets/src/: buscar_nota_fiuba.c  echoserver.c
sockets/src/socket/01_ala_C/: .socket.cpp.swp  resolver.cpp  resolver.h  socket.cpp  socket.h
stl/: stl.tex
templates/: Makefile  templates.tex
